test/fixtures/type-error/noOverloadQty.ro
type i32 = ???
type f32 = ???

fun x(): i32 = 1
fun x(a: i32): i32 = 1

export fun x(a: f32): i32 = x(1.0, 1, 2)
